--- a/_config.yml
+++ b/_config.yml
@@ -27,17 +27,26 @@ description: >- # this means to ignore newlines until "baseurl:"
 domain: shouldgo.me
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://shouldgo.me # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+permalink: /blog/:title/
+twitter_username: shouldgo
+github_username:  shouldgo
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag # https://github.com/jekyll/jekyll-seo-tag
+  - jekyll-sitemap # https://github.com/jekyll/jekyll-sitemap
+  - jekyll-paginate # https://github.com/jekyll/jekyll-paginate
+  - amp-jekyll # https://github.com/juusaw/amp-jekyll
   
 # Excerpt settings
 show_excerpts: false # We're using our own excerpt display in the post cards
 excerpt_separator: <!--more--> # Optional custom excerpt separator
+
+# Pagination settings
+paginate: 5 # Number of posts per page
+paginate_path: /page:num/ # The path to the paginated pages, e.g. /blog/page2/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
