--- a/_config.yml
+++ b/_config.yml
@@ -37,15 +37,14 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag # https://github.com/jekyll/jekyll-seo-tag
   - jekyll-sitemap # https://github.com/jekyll/jekyll-sitemap
-  - jekyll-paginate # https://github.com/jekyll/jekyll-paginate
-  - amp-jekyll # https://github.com/juusaw/amp-jekyll
+  - jekyll-paginate # https://jekyllrb.com/docs/pagination/
   
 # Excerpt settings
 show_excerpts: false # We're using our own excerpt display in the post cards
 excerpt_separator: <!--more--> # Optional custom excerpt separator
 
 # Pagination settings
-paginate: 5 # Number of posts per page
+paginate: 11 # Number of posts per page
 paginate_path: /page:num/ # The path to the paginated pages, e.g. /blog/page2/
 
 # Exclude from processing.
