--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,12 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
 # If you need help with YAML syntax, here are some quick references for you:
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 #
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# If you look in the HTML files, you will see them accessed via {{ site.title }},
+# {{ site.email }}, and so on. # You can create any custom variable you would like,
+# and they will be accessible in the templates via {{ site.myvariable }}.
 
+# Site settings
 title: Dima Afonin — Personal Blog
 email: shouldgo@me.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -27,7 +16,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 domain: shouldgo.me
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://shouldgo.me # the base hostname & protocol for your site, e.g. http://example.com
-permalink: /blog/:title/
+permalink: /blog/:title/ # Puts posts under /en/blog/title, /pl/blog/title
 twitter_username: shouldgo
 github_username:  shouldgo
 
@@ -37,23 +26,34 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag # https://github.com/jekyll/jekyll-seo-tag
   - jekyll-sitemap # https://github.com/jekyll/jekyll-sitemap
-  - jekyll-paginate # https://jekyllrb.com/docs/pagination/
-  - jekyll-paginate-v2
-  - jekyll-multiple-languages-plugin
+  - jekyll-paginate-v2 # https://github.com/sverrirs/jekyll-paginate-v2
+  - jekyll-loading-lazy # https://github.com/gildesmarais/jekyll-loading-lazy 
   
 # Excerpt settings
 show_excerpts: false # We're using our own excerpt display in the post cards
 excerpt_separator: <!--more--> # Optional custom excerpt separator
 
 # Pagination settings
-paginate: 11 # Number of posts per page
-paginate_path: /page:num/ # The path to the paginated pages, e.g. /blog/page2/
+pagination:
+  enabled: true # Site-wide kill switch, disabled here it doesn't run at all 
+  debug: false # Set to 'true' to enable pagination debugging. This can be enabled in the site config or only for individual pagination pages
+  collection: 'posts'  # The default document collection to paginate if nothing is specified ('posts' is default)
+  per_page: 0 # How many objects per paginated page, used to be `paginate` (default: 0, means all)
+  permalink: '/page:num/' # The permalink structure for the paginated pages (this can be any level deep)
+  # title: ':title - page :num' # Optional the title format for the paginated pages (supports :title for original page title, :num for pagination page number, :max for total number of pages)
+  limit: 0 # Limit how many pagenated pages to create (default: 0, means all)
+  sort_field: 'date' # Optional, defines the field that the posts should be sorted on (omit to default to 'date')
+  sort_reverse: true # Optional, sorts the posts in reverse order (omit to default decending or sort_reverse: true)
+  category: 'posts' # Optional, the default category to use, omit or just leave this as 'posts' to get a backwards-compatible behavior (all posts)
+  # tag: '' # Optional, the default tag to use, omit to disable
+  # locale: '' # Optional, the default locale to use, omit to disable (depends on a field 'locale' to be specified in the posts
+  trail: # Controls how the pagination trail for the paginated pages look like. Optional,omit or set both before and after to zero to disable. 
+    before: 2
+    after: 2
+  extension: html # Optional, the default file extension for generated pages (e.g html, json, xml).
+  indexpage: 'index'   # Optional, the default name of the index file for generated pages (e.g. 'index.html')
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
+# Exclude from processing.#
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
