--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,10 @@
 # and they will be accessible in the templates via {{ site.myvariable }}.
 
 # Site settings
-title: Dima Afonin — Personal Blog
+title: Блог Димы Афонина
 email: shouldgo@me.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Фотография, путешествия и фотографии из путешествий.
 domain: shouldgo.me
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://shouldgo.me # the base hostname & protocol for your site, e.g. http://example.com
