Add travel guides for Cyprus and personal reflections as a digital nomad
- Created two new posts: "Cyprus: Winter Getaway Guide" and "Cyprus: The Other Side of The Island" detailing travel experiences and insights.
- Added a personal reflection post titled "My Year as a Digital Nomad" summarizing travels and experiences throughout the year.
- Updated index pages for English and Russian versions to enable pagination.
- Implemented language switcher for easy navigation between English and Russian content.
- Added JavaScript for automatic language redirection based on user browser settings.

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -18,7 +18,9 @@ nav:
   in: linkedin
   tg: telegram
   ig: instagram
+  home: home
   about: about
+  blog: blog
 tags:
   travel: travel
   photo: photo
