--- a/_i18n/ru.yml
+++ b/_i18n/ru.yml
@@ -18,7 +18,9 @@ nav:
   in: линкедин
   tg: телеграм
   ig: инстаграм
+  home: главная
   about: эбаут
+  blog: блог
 tags:
   travel: тревел
   photo: фото
