--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,12 @@
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# If you look in the HTML files, you will see them accessed via {{ site.title }},
-# {{ site.email }}, and so on. # You can create any custom variable you would like,
-# and they will be accessible in the templates via {{ site.myvariable }}.
-
 # Site settings
 title: Dima Afonin | Personal Blog
 email: shouldgo@me.com
 description: >- # this means to ignore newlines until "baseurl:"
   Photography, travel, and travel photography.
 domain: shouldgo.me
-baseurl: "" # the subpath of your site, e.g. /blog
-url: https://shouldgo.me # the base hostname & protocol for your site, e.g. http://example.com
-permalink: /blog/:title/ # Puts posts under /en/blog/title, /pl/blog/title
+baseurl: ""
+url: https://shouldgo.me
+permalink: /blog/:title/
 twitter_username: shouldgo
 github_username:  shouldgo
 
@@ -28,10 +20,10 @@ plugins:
   - jekyll-loading-lazy # https://github.com/gildesmarais/jekyll-loading-lazy 
   - jekyll-multiple-languages-plugin # https://github.com/kurtsson/jekyll-multiple-languages-plugin
 
-# Multiple languages settings
-languages: ["ru", "en"]
+# Localization settings
+languages: ["en", "ru"]
 exclude_from_localizations: ["javascript", "images", "css"]
-default_lang: "ru"
+default_locale_in_subfolder: false
 
 # Excerpt settings
 show_excerpts: false # We're using our own excerpt display in the post cards
@@ -39,23 +31,23 @@ excerpt_separator: <!--more--> # Optional custom excerpt separator
 
 # Pagination settings
 pagination:
-  enabled: true # Site-wide kill switch, disabled here it doesn't run at all 
-  debug: false # Set to 'true' to enable pagination debugging. This can be enabled in the site config or only for individual pagination pages
-  collection: 'posts'  # The default document collection to paginate if nothing is specified ('posts' is default)
+  enabled: true
+  debug: false
+  collection: 'posts'
   per_page: 0 # How many objects per paginated page, used to be `paginate` (default: 0, means all)
-  permalink: '/page:num/' # The permalink structure for the paginated pages (this can be any level deep)
+  permalink: '/page:num/'
   # title: ':title - page :num' # Optional the title format for the paginated pages (supports :title for original page title, :num for pagination page number, :max for total number of pages)
-  limit: 0 # Limit how many pagenated pages to create (default: 0, means all)
-  sort_field: 'date' # Optional, defines the field that the posts should be sorted on (omit to default to 'date')
-  sort_reverse: true # Optional, sorts the posts in reverse order (omit to default decending or sort_reverse: true)
-  category: 'posts' # Optional, the default category to use, omit or just leave this as 'posts' to get a backwards-compatible behavior (all posts)
+  limit: 0
+  sort_field: 'date'
+  sort_reverse: true
+  category: 'posts'
   # tag: '' # Optional, the default tag to use, omit to disable
   # locale: '' # Optional, the default locale to use, omit to disable (depends on a field 'locale' to be specified in the posts
   trail: # Controls how the pagination trail for the paginated pages look like. Optional,omit or set both before and after to zero to disable. 
     before: 2
     after: 2
   extension: html # Optional, the default file extension for generated pages (e.g html, json, xml).
-  indexpage: 'index'   # Optional, the default name of the index file for generated pages (e.g. 'index.html')
+  indexpage: 'index' # Optional, the default name of the index file for generated pages (e.g. 'index.html')
 
 # Exclude from processing.#
 # Excluded items can be processed by explicitly listing the directories or
