--- a/_i18n/ru.yml
+++ b/_i18n/ru.yml
@@ -12,8 +12,9 @@ descriptions:
   gallery: Коллекция пыльных фотокарточек, сделанных Димой Афониным с 2009 года до наших дней.
 nav:
   fb: фейсбук
-  in: линкедин
-  ig: инстаграм
+  in: линкед
+  ig: инста
+  tg: телега
   home: главная
   about: эбаут
   blog: блог
