Add recent posts section and update related posts references; refactor styles for improved layout

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -6,6 +6,7 @@ paginate:
 titles:
   about: Who's Dima Afonin?
   gallery: Photos by Dima Afonin
+  recent: Recent Posts
 descriptions:
   home: My personal blog about photography, travel, and travel photography.
   about: Dirty secrets, sensational reveals, and nude photo leaks — exclusively on this page!
@@ -19,15 +20,3 @@ nav:
   about: about
   blog: blog
   gallery: gallery
-tags:
-  travel: travel
-  photo: photo
-  video: video
-  notes: notes
-  europe: europe
-  asia: asia
-  politics: politics
-  russia: russia
-  deutchland: deutchland
-  polska: polska
-  czechia: czechia
