Refactor styles and components: consolidate SCSS imports, enhance layout, and remove unused files

--- a/_config.yml
+++ b/_config.yml
@@ -56,18 +56,19 @@ pagination:
   extension: html # Optional, the default file extension for generated pages (e.g html, json, xml).
   indexpage: 'index' # Optional, the default name of the index file for generated pages (e.g. 'index.html')
 
-# Exclude from processing.#
+# Exclude from processing.
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+  - Gemfile
+  - Gemfile.lock
+  - node_modules/
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - scripts/
+  - "*.zsh"
