--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ plugins:
   - jekyll-loading-lazy # https://github.com/gildesmarais/jekyll-loading-lazy 
   - jekyll-multiple-languages-plugin # https://github.com/kurtsson/jekyll-multiple-languages-plugin
   - jekyll-target-blank #https://github.com/keithmifsud/jekyll-target-blank
+  - jekyll-redirect-from # https://github.com/jekyll/jekyll-redirect-from
 
 # Sass/SCSS settings
 sass:
@@ -30,6 +31,12 @@ sass:
 languages: ["en", "ru"]
 exclude_from_localizations: ["javascript", "images", "css", "assets"]
 default_locale_in_subfolder: false
+
+# Collections
+collections:
+  redirects:
+    output: true
+    permalink: /:name/
 
 # Excerpt settings
 show_excerpts: false # We're using our own excerpt display in the post cards
