--- a/_i18n/ru.yml
+++ b/_i18n/ru.yml
@@ -8,10 +8,12 @@ titles:
   about: Кто такой Дима Афонин?
   gallery: Фото by Дима Афонин
   recent: Свежие посты
+  privacy: Политика Приватности
 descriptions:
   home: Блог о фотографии, путешествиях и фотографиях из путешествий.
   about: Грязные секреты, сенсационные ответы и голенькие фото — только на этой странице!
   gallery: Коллекция пыльных фотокарточек, сделанных Димой Афониным с 2009 года до наших дней.
+  privacy: Информация о том, как этот сайт обрабатывает ваши данные и конфиденциальность.
 nav:
   fb: фейсбук
   in: линкед
@@ -21,3 +23,4 @@ nav:
   about: эбаут
   blog: блог
   gallery: галерея
+  privacy: приватность
