--- a/_i18n/ru.yml
+++ b/_i18n/ru.yml
@@ -24,3 +24,7 @@ nav:
   blog: блог
   gallery: галерея
   privacy: приватность
+consent:
+  message: Этот сайт использует куки для аналитики — как описано в
+  privacy_link: политике приватности
+  accept: Принять
